Fix to match JVM

--- a/unit-tests/src/test/resources/properties-load-test.properties
+++ b/unit-tests/src/test/resources/properties-load-test.properties
@@ -28,6 +28,7 @@ space=\   c
 
 dblbackslash=\\
 
-trailing = foo, \   
+# jvm does not trim trailing space so no line continuation
+trailing = foo, \  
 bar
 notrailing = baz \\  
