--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -6,7 +6,7 @@ on:
       - master
 jobs:
   build-plugin:
-    name: Build plugin for ${{ matrix.binary-version}}
+    name: Build plugin artifacts
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -56,10 +56,9 @@ jobs:
             rm -rf $HOME/docker; \
           fi
       - name: Run multiarch register
-        run: |
-          docker run
-          --rm
-          --privileged
+        run: docker run \
+          --rm \
+          --privileged \
           multiarch/qemu-user-static:register;
 
       - name: Build image
@@ -72,21 +71,18 @@ jobs:
           ci-docker;
 
   test-tools:
-    name: Test tools on Scala ${{ matrix.scalaVersion }}
+    name: Test tools
     runs-on: ubuntu-latest
     needs: build-plugin
     strategy:
       matrix:
-        scalaVersion: [ 2.13.3, 2.12.2, 2.11.12 ]
+        scalaVersion: [ 2.13.3 ] #, 2.12.2, 2.11.12 ]
     steps:
       - uses: actions/checkout@v2
-      - run: |
-          sbt "-no-colors -J-Xmx3G"
-          ";++ ${{ matrix.scalaVersion }} -v"
-          "test-tools"
+      - run: sbt "++ $TRAVIS_SCALA_VERSION -v" "-no-colors" "-J-Xmx3G" test-tools;
 
   test-runtime:
-    name: Test runtime on Scala ${{ matrix.scalaVersion }} and ${{ matrix.os }}
+    name: Test runtime
     runs-on: ${{ matrix.os }}
     needs: [build-image, test-tools]
     strategy:
@@ -110,16 +106,17 @@ jobs:
       - uses: actions/checkout@v1
 
       - name: Test main grid
-        run: "docker run \
-        -v $HOME/.ivy2:/home/scala-native/.ivy2 \
-        -v $HOME/.sbt:/home/scala-native/.sbt \
-        -v $PWD:/home/scala-native/scala-native \
-        -e SCALANATIVE_MODE=${{ matrix.buildMode }} \
-        -e SCALANATIVE_GC=${{ matrix.gc }} \
-        -e SCALA_VERSION=${{ matrix.scalaVersion }} \
-        -e SCALANATIVE_OPTIMIZE=true \
-        -e TEST_COMMAND=test-runtime \
-        -it scala-native-testing:linux-${{ matrix.targetPlatform }};"
+        run: docker run \
+          -v $HOME/.ivy2:/home/scala-native/.ivy2 \
+          -v $HOME/.sbt:/home/scala-native/.sbt \
+          -v $PWD:/home/scala-native/scala-native \
+          -e SCALANATIVE_MODE=${{ matrix.buildMode }} \
+          -e SCALANATIVE_GC=${{ matrix.gc }} \
+          -e SCALA_VERSION=${{ matrix.scalaVersion }} \
+          -e SCALANATIVE_OPTIMIZE=true \
+          -e TEST_COMMAND=test-runtime \
+          -it \
+          scala-native-testing:linux-${{ matrix.targetPlatform }} \
 
   test-runtime-no-opt:
     name: Test not optimized runtime on Scala ${{ matrix.scalaVersion }} and ${{ matrix.os }}
@@ -136,7 +133,8 @@ jobs:
       - uses: actions/checkout@v1
 
       - name: Test non optimized
-        run: "docker run \
+        run: |
+          docker run \
           -v $HOME/.ivy2:/home/scala-native/.ivy2 \
           -v $HOME/.sbt:/home/scala-native/.sbt \
           -v $PWD:/home/scala-native/scala-native \
@@ -145,7 +143,8 @@ jobs:
           -e SCALA_VERSION=${{ matrix.scalaVersion }} \
           -e SCALANATIVE_OPTIMIZE=false \
           -e TEST_COMMAND=test-runtime \
-          -it scala-native-testing:linux-${{ matrix.targetPlatform }};"
+          -it \
+          scala-native-testing:linux-${{ matrix.targetPlatform }}
 
   test-scripted:
     name: Test scripted on Scala ${{ matrix.scalaVersion }} and ${{ matrix.os }}
@@ -157,7 +156,7 @@ jobs:
         os: [ ubuntu-latest ]
     steps:
       - uses: actions/checkout@v1
-      - run: "docker run \
+      - run: docker run \
         -v $HOME/.ivy2:/home/scala-native/.ivy2 \
         -v $HOME/.sbt:/home/scala-native/.sbt \
         -v $PWD:/home/scala-native/scala-native \
@@ -166,4 +165,5 @@ jobs:
         -e SCALA_VERSION=${{ matrix.scalaVersion }} \
         -e SCALANATIVE_OPTIMIZE=true \
         -e TEST_COMMAND=test-scripted \
-        -it scala-native-testing:linux-${{ matrix.targetPlatform }};"
+        -it \
+        scala-native-testing:linux-${{ matrix.targetPlatform }}
