scalafmt: increased maxVisitsPerToken

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -16,6 +16,10 @@ literals.long = unchanged
 literals.float = unchanged
 literals.double = unchanged
 
+# default value is 10,000
+# increased it to 100,000 to allows to process NirGenExpr.scala
+runner.optimizer.maxVisitsPerToken = 100000
+
 rewriteTokens = {
   "⇒": "=>"
   "→": "->"
