Try update and apt

--- a/.github/workflows/check-lint.yml
+++ b/.github/workflows/check-lint.yml
@@ -10,5 +10,5 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Install clang-format to match minimum clang version
-        run: sudo apt-get install clang-format-6.0
+        run: sudo apt update && sudo apt install clang-format-6.0
       - run: ./scripts/check-lint.sh
