--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -113,6 +113,7 @@ jobs:
         scala: [2.13.4, 2.12.12, 2.11.12]
         build-mode: [ debug , release-fast ]
         gc: [ boehm, immix, commix ]
+        docker_arch: [ library, i386 ]
         # Create holes in grid to lower number of tests.
         # Excluded entries should have low impact on overall project coverage
         exclude:
@@ -124,6 +125,10 @@ jobs:
             gc: immix
           - scala: 2.11.12
             build-mode: debug
+            gc: commix
+          - docker_arch: i386
+            gc: immix
+          - docker_arch: i386
             gc: commix
     steps:
       - uses: actions/checkout@v2
@@ -156,7 +161,7 @@ jobs:
           SCALANATIVE_OPTIMIZE: true
           SCALA_VERSION: ${{ matrix.scala}}
           TEST_COMMAND: test-runtime
-        run: ./ci-docker/run-test-gha.sh "${{ needs.build-image.outputs.image-name }}-amd64"
+        run: ./ci-docker/run-test-gha.sh "${{ needs.build-image.outputs.image-name }}-${{ matrix.docker_arch }}"
 
   # This job is basically copy-paste of test-runtime.
   # Main difference is disabled optimization and fixed Immix GC
@@ -169,6 +174,7 @@ jobs:
       matrix:
         scala: [ 2.13.4, 2.12.12, 2.11.12 ]
         build-mode: [ debug, release-fast ]
+        docker_arch: [ library, i386 ]
     steps:
       - uses: actions/checkout@v2
       - name: Calculate binary version
