Update scripted tests for new Docker config

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -220,6 +220,8 @@ jobs:
       fail-fast: false
       matrix:
         scala: [2.13.4, 2.12.12, 2.11.12]
+        host_arch: [ amd64 ]
+        docker_arch: [ library ]
     steps:
       - uses: actions/checkout@v2
       - name: Calculate binary version
@@ -242,7 +244,7 @@ jobs:
         uses: actions/cache@v1
         with:
           path: /tmp/docker-registry
-          key: docker-registry-${{ hashFiles('ci-docker/Dockerfile') }}
+          key: docker-registry-${{ hashFiles('ci-docker/Dockerfile') }}-${{ matrix.host_arch }}-${{ matrix.docker_arch }}
 
       - name: Run tests
         env:
@@ -251,4 +253,4 @@ jobs:
           SCALANATIVE_OPTIMIZE: true
           SCALA_VERSION: ${{ matrix.scala}}
           TEST_COMMAND: test-scripted
-        run: ./ci-docker/run-test-gha.sh "${{ needs.build-image.outputs.image-name }}-amd64"
+        run: ./ci-docker/run-test-gha.sh "${{ needs.build-image.outputs.image-name }}-${{ matrix.docker_arch }}"
