Fix #1327 and #1415: Enforce C formatting via clangfmt with minimum version (#2097)

--- a/.github/workflows/check-lint.yml
+++ b/.github/workflows/check-lint.yml
@@ -10,3 +10,5 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - run: ./scripts/check-lint.sh
+        env:
+          CLANG_FORMAT_PATH: "/usr/lib/llvm-6.0/bin/clang-format"
