--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [2.13.4, 2.12.13, 2.11.12]
+        scala: [2.13.4, 2.13.5, 2.12.13, 2.11.12]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
@@ -113,7 +113,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [2.13.4, 2.12.13, 2.11.12]
+        scala: [2.13.4, 2.13.5, 2.12.13, 2.11.12]
         build-mode: [ debug , release-fast ]
         gc: [ boehm, immix, commix ]
         # Create holes in grid to lower number of tests.
@@ -122,6 +122,9 @@ jobs:
           - scala: 2.13.4
             build-mode: debug
             gc: boehm
+          - scala 2.13.5
+            build-mode: debug
+            gc: immix
           - scala: 2.12.13
             build-mode: debug
             gc: immix
@@ -170,7 +173,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [ 2.13.4, 2.12.13, 2.11.12 ]
+        scala: [ 2.13.4, 2.13.5, 2.12.13, 2.11.12 ]
         build-mode: [ debug, release-fast ]
     steps:
       - uses: actions/checkout@v2
