--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -122,7 +122,7 @@ jobs:
           - scala: 2.13.4
             build-mode: debug
             gc: boehm
-          - scala 2.13.5
+          - scala: 2.13.5
             build-mode: debug
             gc: immix
           - scala: 2.12.13
