--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -38,11 +38,15 @@ jobs:
             ~/.sbt/boot
           key: ${{ runner.os }}-deps-${{ env.binary-version }}-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
 
-      - name: Compile
-        run: sbt "++ ${{ matrix.scala }} -v" "-no-colors" "-J-Xmx3G" compile
-
       - name: Test tools
         run: sbt "++ ${{ matrix.scala }} -v" "-no-colors" "-J-Xmx3G" test-tools
+
+      # Pre-compile and cache results for the most time consuming projects and it dependencies too speed up execution in next phases
+      # We cannot use `compile` because sbtScalaNative does not crossCompile
+      - name: Compile
+        run: sbt "++ ${{ matrix.scala }} -v" "-no-colors" "-J-Xmx3G" \
+          "tests/Test/compile" "testsExt/Test/compile" \
+          "junitTestOutputsNative/Test/compile" "junitTestOutputsJVM/Test/compile"
 
   # Build testing image that would be used to build and run against different platforms
   # Currently only Linux x64 is tested
@@ -210,7 +214,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [2.13.4, 2.12.13, 2.11.12]
+        scala: [2.12.13]
     steps:
       - uses: actions/checkout@v2
       - name: Calculate binary version
