Fix #2181: Use strict OS version control in GitHub workflows
We modify two github workflow actions to use explicit & strict
configuration of the operating system in GitHub work flows.

This PR restores the OS versions to that in use before the end of
February, 2021 "ubuntu-latest" change by GitHub.

See referenced Issue for a discussion of OS version specified.

--- a/.github/workflows/check-cla.yml
+++ b/.github/workflows/check-cla.yml
@@ -2,7 +2,7 @@ name: Check CLA
 on: [pull_request]
 jobs:
   check-cla:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v1
       - run: ./scripts/check-cla.sh
