--- a/.github/workflows/check-lint.yml
+++ b/.github/workflows/check-lint.yml
@@ -8,7 +8,11 @@ jobs:
   check-lint:
     runs-on: ubuntu-18.04
     steps:
+      - name: Install clang-format
+        run: |
+          sudo apt update
+          sudo apt install clang-format-6.0
       - uses: actions/checkout@v2
       - run: ./scripts/check-lint.sh
         env:
-          CLANG_FORMAT_PATH: "/usr/lib/llvm-6.0/bin/clang-format"
+          CLANG_FORMAT_PATH: "/usr/bin/clang-format-6.0"
