--- a/ci-docker/Dockerfile
+++ b/ci-docker/Dockerfile
@@ -24,15 +24,16 @@ RUN apt-get update && apt-get install -y openjdk-8-jdk-headless:$HOST_ARCHITECTU
 ENV PATH "/usr/lib/jvm/java-8-openjdk-$HOST_ARCHITECTURE/bin:$PATH"
 
 ENV SBT_LAUNCHER_VERSION 1.3.7
+ENV SBT_INSTALL_FILE sbt-$SBT_LAUNCHER_VERSION.deb
+ENV SBT_INSTALL_URL https://repo.scala-sbt.org/scalasbt/debian/SBT_INSTALL_FILE
 
 RUN apt-get install -y curl
 
 # Install sbt
 RUN \
-  curl -L -o sbt-$SBT_LAUNCHER_VERSION.deb \
-      https://repo.scala-sbt.org/scalasbt/debian/sbt-1.3.7.deb && \
-  dpkg -i sbt-$SBT_LAUNCHER_VERSION.deb && \
-  rm sbt-$SBT_LAUNCHER_VERSION.deb && \
+  curl -L -O SBT_INSTALL_URL && \
+  dpkg -i SBT_INSTALL_FILE && \
+  rm SBT_INSTALL_FILE && \
   apt-get update && \
   apt-get install -y sbt
 
