--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -6,17 +6,9 @@ on:
       - master
 
 jobs:
-  compile-gc:
-    name: Compile GCs
+  compile-native-source:
+    name: Compile native sources
     runs-on: windows-2019
-    strategy:
-      matrix: 
-        gc: [
-        {name: none,    include: [shared]},
-        {name: immix,   include: [shared, immix_commix]},
-        {name: commix,  include: [shared, immix_commix]}
-        ]
-      fail-fast: false
     steps:
       - uses: actions/checkout@v2
       
@@ -41,39 +33,25 @@ jobs:
       # Compile all files in GC and included shared directories using clang.
       - name: Compile GCs
         run: |
-          $gcRoot       = (Resolve-Path -Path ".\nativelib\src\main\resources\scala-native\gc").Path 
-          $gcDir        = %{Join-Path $gcRoot "${{matrix.gc.name}}"}
-          $sharedDirs   = @("${{ join(matrix.gc.include, '", "') }}") | %{Join-Path $gcRoot $_}
-          $compiledDirs = @($gcDir) + $sharedDirs
-          $includes     = $sharedDirs | %{"-I" + $_}
-          Get-ChildItem -Path $compiledDirs -Filter *.c -Recurse -File `
-          | ForEach-Object {clang -std=gnu11 -Wno-override-module $includes -c "$_"}
-          Get-ChildItem -Path $compiledDirs -Filter *.cpp -Recurse -File `
-          | ForEach-Object {clang++ -std=c++14 -Wno-override-module $includes -c "$_"}
+          $gcRoot       = (Resolve-Path -Path ".\nativelib\src\main\resources\scala-native\gc").Path
+          $gcIncludes   = @{}
+          $gcIncludes.Add('none',   @('shared'))
+          $gcIncludes.Add('immix',  @('shared', 'immix_commix'))
+          $gcIncludes.Add('commix', @('shared', 'immix_commix'))
+          $gcIncludes
 
-  compile-non-gc:
-    name: Compile non-GC sources
-    runs-on: windows-2019
-    steps:
-      - uses: actions/checkout@v2
+          ForEach($gcName in $gcIncludes.Keys){
+            $gcDir        = Join-Path $gcRoot $gcName
+            $includeDirs  = $gcIncludes[$gcName] | ForEach-Object{ Join-Path $gcRoot $_ }
+            $includes     = $includeDirs | %{"-I" + $_ }
+            $compiledDirs = @($gcDir) + $includeDirs
 
-      #Prepare environment, clang needs to be installed
-      #Compilation on MSVC needs c++14 or higher and expects llvm 10.0.0 or newer
-      - name: Cache LLVM
-        id: cache-llvm
-        uses: actions/cache@v2
-        with:
-          path: |
-            C:\Program Files\LLVM\
-          key: ${{ runner.os }}-llvm-10
-      - name: Install LLVM
-        if: steps.cache-llvm.outputs.cache-hit != 'true'
-        run: choco install llvm --version=10.0.0
-
-      - name: Add LLVM on Path
-        run: echo "${env:ProgramFiles}\LLVM\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-      - name: Assert clang installed and on path
-        run: clang --version
+            echo "Compiling $gcName"
+            Get-ChildItem -Path $compiledDirs -Filter *.c -Recurse -File `
+            | ForEach-Object {clang -std=gnu11 -Wno-override-module $includes -c "$_"}
+            Get-ChildItem -Path $compiledDirs -Filter *.cpp -Recurse -File `
+            | ForEach-Object {clang++ -std=c++14 -Wno-override-module $includes -c "$_"}
+          }
 
       - name: Compile clib
         run: |
@@ -91,39 +69,16 @@ jobs:
       - name: Compile nativelib
         run: |
           $codeDir      = (Resolve-Path -Path ".\nativelib\src\main\resources\scala-native\").Path
-          $gcDir        = Join-Path $codeDir gc
-          $optionalDir  = Join-Path $codeDir optional
 
-          $cSources = (Get-ChildItem -Path . -Directory -Exclude $gcDir,$optionalDir `
+          $cSources = (Get-ChildItem -Path $codeDir -Directory -Exclude gc,optional `
           | ForEach-Object { Get-ChildItem -Path $_.FullName -File -Recurse -Include *.c,*.S }`
-          ) + (Get-ChildItem -Path . -File -Filter *.c)
+          ) + (Get-ChildItem -Path $codeDir -File -Filter *.c)
 
-          $cppSources = Get-ChildItem -Path . -Directory -Exclude $gcDir,$optionalDir `
-          | ForEach-Object { Get-ChildItem -Path $_.FullName -File -Recurse -Include *.cpp }
+          $cppSources = (Get-ChildItem -Path $codeDir -Directory -Exclude gc,optional `
+          | ForEach-Object { Get-ChildItem -Path $_.FullName -File -Recurse -Include *.cpp }`
+          ) + (Get-ChildItem -Path $codeDir -File -Filter *.cpp)
 
           $cSources | ForEach-Object {clang -std=gnu11 -c "$_"}
           $cppSources | ForEach-Object {clang++ -std=c++14 -c "$_"}
-
-      - name: Cache optional deps
-        id: cache-optional
-        uses: actions/cache@v2
-        with:
-          path: |
-            C:\Program Files\zlib\
-          key: ${{ runner.os }}-optional
-      - name: Install zlib
-        if: steps.cache-optional.outputs.cache-hit != 'true'
-        run: |
-          (New-Object Net.WebClient).DownloadFile('https://raw.githubusercontent.com/horta/zlib.install/master/install.bat', 'install_zlib.bat')
-          ./install_zlib.bat
-          del install_zlib.bat
-
-      # Compile optional components like zlib
-      - name: Compile optional
-        run: |
-          $codeDir      = (Resolve-Path -Path ".\nativelib\src\main\resources\scala-native\optional").Path
-          Get-ChildItem -Path $codeDir -Filter *.c -Recurse -File `
-          | ForEach-Object {clang -std=gnu11 -c -I C:\Program Files\zlib\include "$_"}
-
 
 
