--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -83,10 +83,11 @@ jobs:
 
   run-sandbox:
     name: Run sandbox project
-    runs-on: windows-2019
+    runs-on: ${{matrix.os}}
     strategy:
       fail-fast: false
       matrix:
+        os: [ windows-2016, windows-2019 ]
         scala: [ 2.13.5, 2.12.13, 2.11.12 ]
     steps:
       - uses: actions/checkout@v2
