--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -81,8 +81,8 @@ jobs:
           $cSources | ForEach-Object {clang -std=gnu11 -c "$_"}
           $cppSources | ForEach-Object {clang++ -std=c++14 -c "$_"}
 
-  run-sandbox:
-    name: Run sandbox project
+  run-tests:
+    name: Run tests
     runs-on: ${{matrix.os}}
     strategy:
       fail-fast: false
@@ -122,7 +122,14 @@ jobs:
 
       - name: Run sandbox
         # Set heap limits manually, there seams to be bug in detection of available memory
-        # which results in undefined behavior at runtime
+        # which results in undefined beviour at runtime
         run: |
           sbt ++${{matrix.scala}};sandbox/run
+        shell: cmd
+
+      - name: Run testsExt tests
+        # Set heap limits manually, there seams to be bug in detection of avaiable memory
+        # which results in undefined beviour at runtime
+        run: |
+          sbt ++${{matrix.scala}};testsExt/test
         shell: cmd
