--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,25 +1,15 @@
-version = 2.4.2
-style = defaultWithAlign
-docstrings = JavaDoc
-project.excludeFilters = [
-  scalalib/
-]
+version = 3.0.0-RC3
+docstrings.style = AsteriskSpace
 project.git = true
-# changed 1.6 or after
-align.openParenCallSite = true
-align.openParenDefnSite = true
-# avoid wrapping parens on new line
-danglingParentheses.defnSite = false
-danglingParentheses.callSite = false
-# leave literals alone
-literals.long = unchanged
-literals.float = unchanged
-literals.double = unchanged
-
+project.excludePaths = [
+  "glob:**/scalalib/**"
+]
+# this creates less of a diff but is not default
+# but aligned with Scala.js syntax
+newlines.beforeCurlyLambdaParams = multilineWithCaseOnly
 # default value is 10,000
-# increased it to 100,000 to allows to process NirGenExpr.scala
-runner.optimizer.maxVisitsPerToken = 100000
-
+# Message about NirGenExpr.scala goes away between 18k and 20k
+runner.optimizer.maxVisitsPerToken = 20000
 rewriteTokens = {
   "⇒": "=>"
   "→": "->"
