After review fixes: Add EOF blank lines Use fully qualified path for linktimeInfo property Fix access scopes Fix typos Make FileDescriptor readOnly argument mandatory Move windows.util.helperMethods to java.util as `WindowsHelperMethods`, make private[java]

--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -122,7 +122,7 @@ jobs:
 
       - name: Run sandbox
         # Set heap limits manually, there seams to be bug in detection of avaiable memory
-        # which results in undefined beviour at runtime 
+        # which results in undefined behavior at runtime
         env:
           SCALANATIVE_MIN_SIZE: 128M
           SCALANATIVE_MAX_SIZE: 1G
